fixed overflow  text card

--- a/web/src/scss/layout/Preview.scss
+++ b/web/src/scss/layout/Preview.scss
@@ -118,7 +118,7 @@
   width: 40%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   &__figure {
     width: 100px;
     height: 100px;
